...
                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                        <button key="tableFooterView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="IP1-r9-6Ti">
                            <rect key="frame" x="0.0" y="111.66666793823242" width="390" height="44"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                            <state key="normal" title="Add Tab"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addTab"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <action selector="addTab:" destination="Rfe-Ox-Tcz" eventType="touchUpInside" id="Kne-fo-XgH"/>
                            </connections>
                        </button>
                        <prototypes>
...
                                </tableViewCellContentView>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="tabCell"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
                                    <outlet property="title" destination="hov-7o-wab" id="Qu0-ZM-iYX"/>
                                    <outlet property="url" destination="fu2-KN-pWx" id="eI2-Ne-7dN"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Rfe-Ox-Tcz" id="fNq-qJ-OEN"/>
                            <outlet property="delegate" destination="Rfe-Ox-Tcz" id="eMQ-Am-gHz"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="5Wg-tl-FOW">
                                <rect key="frame" x="0.0" y="766" width="390" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <items>
                                    <barButtonItem enabled="NO" title="Back" id="doR-DU-c0j">
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Back"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="backButtonClicked:" destination="BYZ-38-t0r" id="s7E-0C-E70"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem enabled="NO" title="Forw" id="Pcr-ZR-A2Y">
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Forward"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="forwardButtonClicked:" destination="BYZ-38-t0r" id="2Ak-DI-yMy"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="lws-1U-sBT"/>
                                    <barButtonItem title="Add" id="cTH-Dx-iOD">
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="addBookmark"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="addButtonClicked:" destination="BYZ-38-t0r" id="Xh3-zm-LCV"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem title="Bookmarks" id="1AA-qv-5gJ">
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Bookmarks"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <segue destination="G2W-gm-bag" kind="show" identifier="Bookmarks" id="QhK-lq-49P"/>
                                        </connections>
                                    </barButtonItem>
                                    <barButtonItem title="Reload" id="rtJ-rH-tTe">
                                        <userDefinedRuntimeAttributes>
                                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Reload"/>
                                        </userDefinedRuntimeAttributes>
                                        <connections>
                                            <action selector="reloadButtonClicked:" destination="BYZ-38-t0r" id="g4T-hl-izZ"/>
                                        </connections>
...
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="url"/>
                            </userDefinedRuntimeAttributes>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Tabs" id="Vld-pv-edR">
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="Tabs"/>
                            </userDefinedRuntimeAttributes>
                            <connections>
                                <segue destination="Rfe-Ox-Tcz" kind="show" identifier="Tabs" id="3s3-xg-mPn"/>
                            </connections>
...
